# LibFirewall

./: .release-please-manifest.json  CHANGELOG.md  Firewall.cs  FirewallRuleExtensions.cs  LibFirewall.csproj  NativeMethods.cs  README.md  release-please-config.json
.github/workflows/: release-please.yml
Properties/: launchSettings.json
rust/: CHANGELOG.md  Cargo.toml  build.rs
rust/src/: lib.rs
rust/src/core/: api.rs  mod.rs
rust/src/core/builder/: executor.rs  factory.rs  mod.rs  query.rs
rust/src/core/builder/factory/: rule.rs
rust/src/core/connection/: adapter.rs  mod.rs  properties.rs  query.rs  rule.rs
rust/src/core/memory/: lib.rs
rust/src/core/rule/: adapter.rs  enums.rs  inbound.rs  mod.rs  outbound.rs
rust/src/models/: rule.rs
rust/tests/: connection_security_e2e_test.rs  firewall_e2e_test.rs
