[package]
name = "lib_firewall_rust"
version = "0.5.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
windows = { version = "0.62.2", features = [
    "Win32_Foundation",
    "Win32_NetworkManagement_WindowsFirewall",
    "Win32_System_Com",
    "Win32_System_Ole",
    "Win32_System_Variant",
] }

[build-dependencies]
csbindgen = "1.9.1"
